--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,12 @@ h4,
   margin-top: -60px;
   font-weight: bold;
 }
+.celsius {
+  position: fixed;
+  margin-left: 140px;
+  margin-top: -40px;
+}
+
 ul {
   position: relative;
   margin: -190px 15px 15px;
